<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".MainActivity">

    <!--Display whether bluetooth is available or not-->
    <TextView
        android:id="@+id/statusBluetoothTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textAlignment="center"
        android:textSize="20sp"
        android:textColor="#000"/>
    <!--Bluetooth icon (on/off)-->
    <ImageView
        android:id="@+id/bluetoothIv"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/todo" />
    <!--On Button-->
    <Button
        android:id="@+id/onBtn"
        android:minWidth="200dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/turn_on"
        style="@style/Base.Widget.AppCompat.Button.Colored"/>
    <!--Off btn-->
    <Button
        android:id="@+id/offBtn"
        android:minWidth="200dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/turn_off"
        style="@style/Base.Widget.AppCompat.Button.Colored"/>
    <!--Discoverable button-->
    <Button
        android:id="@+id/discoverableBtn"
        android:minWidth="200dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/discoverable"
        style="@style/Base.Widget.AppCompat.Button.Colored"/>
    <!--Get list of paired devices button-->
    <Button
        android:id="@+id/pairedBtn"
        android:minWidth="200dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_paired_devices"
        style="@style/Base.Widget.AppCompat.Button.Colored"/>
    <!--Show paired devices here-->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/paired_devices"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="26sp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1.5dp"
        android:background="@android:color/black" />

    <TextView
        android:id="@+id/pairedTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minWidth="200dp"
        android:onClick="next_Activity"
        android:layout_marginTop="5dp"
        android:text=""
        android:textColor="#000"
        android:textSize="20sp" />

</LinearLayout>